--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -40,7 +40,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><img src="images/hand-3044387_640.jpg" alt="Imagen del producto" class="product-image"></td>
+            <td><img src="images/hand_3044387_640.jpg" alt="Imagen del producto" class="product-image"></td>
             <td>Producto 1</td>
             <td>$10.00</td>
             <td><input type="number" class="form-control" value="1" min="1"></td>
