--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <nav class="navbar navbar-custom">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="images/logo.png" alt="Logo de la tienda" class="logo">
+                <img src="images/LOGO.png" alt="Logo de la tienda" class="logo">
             </a>
             <div class="nav-items">
                 <a href="#" class="ms-3"><i class="bi bi-heart"></i></a>
