--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             margin-left: 10px;
         }
         .banner {
-            background: url('images/technology_6701404_1280.jpg') no-repeat center center;
+            background: url('images/technology-6701404_1280.jpg') no-repeat center center;
             background-size: cover;
             height: 250px;
         }
@@ -93,13 +93,14 @@
     <nav class="navbar navbar-custom">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="images/LOGO.png" alt="Logo de la tienda" class="logo">
+                <img src="images/logo.png" alt="Logo de la tienda" class="logo">
             </a>
             <div class="nav-items">
                 <a href="#" class="ms-3"><i class="bi bi-heart"></i></a>
                 <a href="login.html" class="ms-3">Iniciar Sesión</a>
                 <a href="proyectos.html" class="ms-3">Proyectos</a>
                 <a href="contacto.html" class="ms-3">Contáctenos</a>
+                <a href="Visualizaciones.html" class="ms-3">Visualizaciones</a>
                 <a href="carrito_de_compras.html" class="ms-3"><i class="bi bi-cart"></i></a>
                 
             </div>
@@ -128,7 +129,7 @@
         <div class="row justify-content-center text-center">
             <div class="col-md-4">
                 <div class="card product-card">
-                    <img src="images/ai_generated_9011954_640.jpg" class="card-img-top" alt="Paquete Básico">
+                    <img src="images/ai-generated-9011954_640.jpg" class="card-img-top" alt="Paquete Básico">
                     <div class="card-body">
                         <h5 class="card-title">Paquete Básico</h5>
                         <p class="card-text">$800.000</p>
@@ -143,7 +144,7 @@
             <!-- Producto 2 -->
             <div class="col-md-4">
                 <div class="card product-card">
-                    <img src="images/artificial_intelligence_8721164_640.jpg" class="card-img-top" alt="Paquete Intermedio">
+                    <img src="images/artificial-intelligence-8721164_640.jpg" class="card-img-top" alt="Paquete Intermedio">
                     <div class="card-body">
                         <h5 class="card-title">Paquete Intermedio</h5>
                         <p class="card-text">$1.500.000</p>
@@ -154,7 +155,7 @@
             <!-- Producto 3 -->
             <div class="col-md-4">
                 <div class="card product-card">
-                    <img src="images/robot_8769802_640.jpg" class="card-img-top" alt="Paquete Avanzado">
+                    <img src="images/robot-8769802_640.jpg" class="card-img-top" alt="Paquete Avanzado">
                     <div class="card-body">
                         <h5 class="card-title">Paquete Avanzado</h5>
                         <p class="card-text">$2.500.000</p>
