--- a/proyectos.html
+++ b/proyectos.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <div class="comedor">
-            <img src='images/análisis_de_base_de_datos_compressor.jpg' class="card-img-top" alt="Análisis Básico"> <!-- Asegúrate de que la extensión sea correcta -->
+            <img src="images/análisis_de_base_de_datos_compressor.jpg" class="card-img-top" alt="Análisis Básico"> <!-- Asegúrate de que la extensión sea correcta -->
             <h2>Análisis Básico</h2>
             <p>(1 Análisis Mensual, 1 Reporte de Seguimiento.</p>
         </div>
@@ -73,6 +73,5 @@
             <p>Consultoría Individualizada según las Necesidades y Talleres de capacitación para el Personal en Herramientas de Análisis de Datos.</p>
         </div>
     </div>
- 
 </body>
 </html>
