--- a/Visualizaciones.html
+++ b/Visualizaciones.html
@@ -34,15 +34,16 @@
     
     <!-- Galería de imágenes PNG -->
     <div class="gallery">
-        <img src="images/PW1.PNG" alt="Imagen 1">
-        <img src="images/PW2.PNG" alt="Imagen 2">
-        <img src="images/PW3.PNG" alt="Imagen 3">
-        <img src="images/PW4.PNG" alt="Imagen 4">
-        <img src="images/PW5.PNG" alt="Imagen 5">
+        <img src="images/PW1.PNG" alt="Visualización Power BI 1">
+        <img src="images/PW2.PNG" alt="Visualización Power BI 2">
+        <img src="images/PW3.PNG" alt="Visualización Power BI 3">
+        <img src="images/PW4.PNG" alt="Visualización Power BI 4">
+        <img src="images/PW5.PNG" alt="Visualización Power BI 5">
     </div>
 
 </body>
 </html>
+
 
 
 
