--- a/visualizaciones.html
+++ b/visualizaciones.html
@@ -34,11 +34,11 @@
     
     <!-- Galería de imágenes PNG -->
     <div class="gallery">
-        <img src="images/PW1.PNG" alt="Imagen 1">
-        <img src="images/PW2.PNG" alt="Imagen 2">
-        <img src="images/PW3.PNG" alt="Imagen 3">
-        <img src="images/PW4.PNG" alt="Imagen 4">
-        <img src="images/PW5.PNG" alt="Imagen 5">
+        <img src="images/PW1.png" alt="Imagen 1">
+        <img src="images/PW2.png" alt="Imagen 2">
+        <img src="images/PW3.png" alt="Imagen 3">
+        <img src="images/PW4.png" alt="Imagen 4">
+        <img src="images/PW5.png" alt="Imagen 5">
     </div>
 
 </body>
