--- a/visualizaciones.html
+++ b/visualizaciones.html
@@ -34,7 +34,7 @@
     
     <!-- Galería de imágenes PNG -->
     <div class="gallery">
-        <img src="PW1.png" alt="Imagen 1">
+        <img src="images/PW1.png" alt="Imagen 1">
         <img src="images/PW2.png" alt="Imagen 2">
         <img src="images/PW3.png" alt="Imagen 3">
         <img src="images/PW4.png" alt="Imagen 4">
