--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <nav class="navbar navbar-custom">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="images/logo.png" alt="Logo de la tienda" class="logo">
+                <img src="images/LOGO.png" alt="Logo de la tienda" class="logo">
             </a>
             <div class="nav-items">
                 <a href="#"><i class="bi bi-heart"></i></a>
