--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 <body class="d-flex justify-content-center align-items-center vh-100">
     <div class="bg-white p-5 rounded-5 text-secondary shadow" style="width: 25rem">
         <div class="d-flex justify-content-center mb-4">
-            <img src="images/logo.png" alt="Login icon" style="height: 7rem" />
+            <img src="images/LOGO.png" alt="Login icon" style="height: 7rem" />
         </div>
         <div class="text-center fs-1 fw-bold mb-4">Login</div>
         <div class="input-group mb-3">
