--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <!-- Logo centrado -->
     <div class="text-center mt-4">
         <a href="#">
-            <img src="images/logo.png" alt="Logo de la tienda" class="logo">
+            <img src="images/LOGO.png" alt="Logo de la tienda" class="logo">
         </a>
     </div>
 
