--- a/proyectos.html
+++ b/proyectos.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Roboto', sans-serif; /* Fuente moderna */
             margin: 20px;
-            background: linear-gradient(135deg, #0D3B66, #FAF0B8); /* Fondo elegante */
+            background: linear-gradient(135deg, #0D3B66, #002147); /* Fondo elegante */
             color: #fff; /* Color del texto */
         }
         h1 {
