--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <style>
         /* Fondo degradado */
         body {
-            background: linear-gradient(to bottom, #003366, #00509E); /* De azul oscuro a azul menos oscuro */
+            background: linear-gradient(to bottom, #003366, #002147); /* De azul oscuro a azul menos oscuro */
             min-height: 100vh; /* Asegura que el fondo cubra toda la altura */
         }
         
