--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     />
     <style>
         body {
-            background: linear-gradient(135deg, #00416A, #E4E5E6); /* Degradado de azul oscuro a azul claro */
+            background: linear-gradient(135deg, #00416A, #002147); /* Degradado de azul oscuro a azul claro */
             /* Color de fondo más claro */
         }
         .btn-info {
